<resources>
    <string name="app_name">Grocery app</string>
    <string name="welcome_message">Welcome to the Inventory App Camper</string>
    <string name="btn_next">Next</string>
    <string name="btn_add_gear">Add Gear</string>
    <string name="total_items_packed">Total Items Packed: %1$d</string>
    <string name="btn_view_checklist">View Checklist</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="item_name">Item Name</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="back_to_base">Back to Base</string>
    <string name="gear_checklist">Gear Checklist</string>
</resources>