<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".ViewScreen">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_base"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/btnGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gear_checklist"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="92dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textColor="#F2F2F2"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="#F4EEEE"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="#EDE6E6"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="308dp" />

    <EditText
        android:id="@+id/txtItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="166dp" />

    <EditText
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comments"
        android:textColor="#FBF9F9"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="368dp" />

    <EditText
        android:id="@+id/txtComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="368dp" />

</androidx.constraintlayout.widget.ConstraintLayout>